2003-05-02	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* aclocal/env-rtemscpu.m4: Remove stray '/' in setting up 
	project_libdir.

2003-04-23	Joel Sherrill <joel@OARcorp.com>

	* aclocal/version.m4: Updated to rtems-4.6.0pre3.

2003-04-18	Joel Sherrill <joel@OARcorp.com>

	* aclocal/version.m4: Updated to rtems-4.6.0pre2.

2003-03-12	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* wrapup/Makefile.am: Remove '/' after $(DESTDIR) to work around
	Cygwin mistreating paths.

2003-03-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* wrapup/Makefile.am: Reflect changes to project_libdir.

2003-03-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* aclocal/env-rtemscpu.m4: Remove obsolete comment.
	Add MULTISUBDIR to project_libdir.

2003-03-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* aclocal/env-rtemscpu.m4: Remove RTEMS_ROOT (Unused).
	* aclocal/env-rtemsbsp.m4: Remove RTEMS_ROOT (Unused).
	Remove RTEMS_PROJECT_ROOT (Unused).
	* aclocal/tool-paths.m4: Delete.

2003-03-06	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove AC_CONFIG_AUX_DIR.
	* aclocal/rtems-top.m4: Add AC_CONFIG_AUX_DIR.

2003-03-06	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: AC_PREREQ(2.57).

2003-03-06	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove sptables.h.in.

2003-02-28	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove AC_SUBST(RTEMS_VERSION).
	AC_DEFINE(RTEMS_VERSION) to propagate it through cpuopts.h.

2003-02-26	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: AC_SUBST(RTEMS_VERSION,_RTEMS_VERSION).

2003-02-18	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* aclocal/gcc-isystem.m4: New.
	* aclocal/gcc-specs.m4: Remove.
	* aclocal/prog-cc.m4: Remove RTEMS_GCC_SPECS.
	Add RTEMS_GCC_ISYSTEM.
	Reformat setting up RTEMS_CPPFLAGS.

2003-02-18	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* automake/local.am: Introduce depend-gcc.
	Remove ${ARCH}.
	* automake/compile.am: Remove GCCSPECS, GCC_SPECS, CONFIG.CC, CC,