@@ -1,5 +1,11 @@
 2003-05-02	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
 
+	* aclocal/env-rtemscpu.m4: Merge-in env-rtemsbsp.m4.
+	* aclocal/env-rtemsbsp.m4: Remove.
+	* aclocal/enable-rtemsbsp.m4: Remove.
+
+2003-05-02	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
+
 	* aclocal/env-rtemscpu.m4: Remove stray '/' in setting up 
 	project_libdir.
 
